--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.2.3",
     "font-awesome": "^4.7.0",
     "sass": "^1.56.1",
+    "sass-loader": "^13.2.0",
     "vue": "^3.2.41"
   },
   "devDependencies": {
